--- a/artbyluke-main/style.css
+++ b/artbyluke-main/style.css
@@ -172,4 +172,17 @@ vertical-align: middle;
   }
 }
 
+.full-width-banner {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  text-align: center;
+  background-color: #fdfdfd; /* match site background */
+}
+
 
