--- a/artbyluke-main/style.css
+++ b/artbyluke-main/style.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0 auto;
   max-width: 36em;
@@ -41,4 +42,8 @@ body {
     font-size: 0.9em;
     padding: 12px;
   }
+}
+
+img {
+  all: unset;
 }
