--- a/artbyluke-main/style.css
+++ b/artbyluke-main/style.css
@@ -2,7 +2,7 @@
 html {
   background-color: #fdfdfd;
   color: #1a1a1a;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 body {
