--- a/artbyluke-main/style.css
+++ b/artbyluke-main/style.css
@@ -22,24 +22,37 @@ body {
    Header Image Container
 ----------------------------- */
 
-.image-container {
+.image-container,
+.header-image-container {
   text-align: center;
+  width: 100%;
+  max-width: 100%;
   margin-bottom: 2em;
+  overflow-x: hidden;
 }
 
 .header-img {
-  width: 100%;
-  max-width: 600px;
+  max-width: 100%;
+  width: 600px;
   height: auto;
   display: block;
   margin: 0 auto;
 }
+
 
 .caption {
   font-size: 0.9em;
   color: #555;
   text-align: center;
   margin-top: 0.5em;
+}
+
+.preview-clip {
+  max-width: 100%;
+  width: 600px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 /* -----------------------------
