--- a/artbyluke-main/style.css
+++ b/artbyluke-main/style.css
@@ -38,7 +38,7 @@ body {
 
 .header-img {
   max-width: 100%;
-  width: 600px;
+  width: 36em;
   height: auto;
   display: block;
   margin: 0 auto;
