--- a/artbyluke-main/style.css
+++ b/artbyluke-main/style.css
@@ -28,12 +28,12 @@ body {
    Reusable Media Class (Images & Video)
 ----------------------------- */
 
-.media {
-  max-width: 100%;
-  width: 100%;
-  height: auto;
+.project-img {
   display: block;
   margin: 0 auto;
+  width: 100%;
+  max-width: 600px;
+  height: auto;
 }
 
 .billboard-img {
