--- a/artbyluke-main/style.css
+++ b/artbyluke-main/style.css
@@ -28,13 +28,7 @@ body {
    Reusable Media Class (Images & Video)
 ----------------------------- */
 
-.project-img {
-  display: block;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 600px;
-  height: auto;
-}
+
 
 .billboard-img {
   display: block;
@@ -147,11 +141,17 @@ iframe {
     padding: 12px;
   }
 
-  .media {
-    max-width: 100%;
-    width: 100%;
+  .media,
+   .project-img {
+     display: block;
+     margin: 0 auto;
+     width: 100%;
+     max-width: 600px;
+     height: auto;
+   }
   }
 }
+
 
 .project-title {
   font-weight: bold;
