--- a/artbyluke-main/style.css
+++ b/artbyluke-main/style.css
@@ -28,8 +28,6 @@ body {
    Reusable Media Class (Images & Video)
 ----------------------------- */
 
-
-
 .billboard-img {
   display: block;
   margin: 0 auto;
@@ -37,6 +35,15 @@ body {
   max-width: 100%;
   height: auto;
 }
+
+.project-img {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+}
+
 
 /* -----------------------------
    Caption
@@ -142,15 +149,12 @@ iframe {
   }
 
   .media,
-   .project-img {
-     display: block;
-     margin: 0 auto;
-     width: 100%;
-     max-width: 600px;
-     height: auto;
-   }
+  .project-img {
+    width: 100%;
+    max-width: 100%;
   }
 }
+
 
 
 .project-title {
